objects/Product_tax__c.object
<CustomObject>
    <fields>
        <fullName>City_Name__c</fullName>
        <label>City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Product tax</label>
    <nameField>
        <displayFormat>PRTX-{0000}</displayFormat>
        <label>Product tax Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product tax</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>